5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1644_2711.log
== SUBMITION (2019-04-16 14:08:27) 
-- CODE:
#digitar o saldo mensal
valor=float(input("valor disponivel: ")

#digitar quantidade de consumo mensal
tickets=int(input("Quantos tickets? "))
passes=int(input("Qauntos passes: "))
				
#digitar o valor dos produtos
t=float(input("valor unit ticket? "))
p=float(input("valor unit passe? "))
				
#Calcular
x=tickets*t
y=passes*p

a=valor-(x+y)
			
#condicao/IMPRESSAO
if(a>=valor):
	mensagem="SUFICIENTE"
else:
	mensagem="INSUFICIENTE"
print(mensagem.upper())

				
-- EXECUTION TIME:
0.142669
-- ERROR:
  File "/home/codebench/codes/1644/2711/main.py", line 5
    tickets=int(input())
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:09:19) 
-- CODE:
v=int(input("valor:"))
q=int(input("quantidade de tickets do RU:"))
va=float(input("valor dos tickets:"))
qp=int(input("quantidade de passes de onibus:"))
vp=float(input("valor dos passes:"))

d=va*q
s=(vp*qp)+d
f=v-s
q=v-f

if(v >= q):
	mensagem="SUFICIENTE"
else:
	mensagem="INSUFICIENTE"

print(mensagem.upper())

				
-- EXECUTION TIME:
0.113139
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:09:20) 
-- CODE:
v=int(input("valor:"))
q=int(input("quantidade de tickets do RU:"))
va=float(input("valor dos tickets:"))
qp=int(input("quantidade de passes de onibus:"))
vp=float(input("valor dos passes:"))

d=va*q
s=(vp*qp)+d
f=v-s
q=v-f

if(v >= q):
	mensagem="SUFICIENTE"
else:
	mensagem="INSUFICIENTE"

print(mensagem.upper())

				
-- EXECUTION TIME:
0.128646
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
